# uvicorn-worker

./: .gitignore  LICENSE.md  README.md  TODO.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  publish.yml
docs/: mkdocs.yml
docs/docs/: index.md
scripts/: build  check  coverage  lint  publish  test
tests/: conftest.py  test_workers.py
uvicorn_worker/: __init__.py  _workers.py  workers.py
