[tool.poetry]
name = "uvicorn-worker"
version = "0.0.1"
description = ""
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gunicorn = ">=20.1.0"
uvicorn = ">=0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
